Finally fixed the gap in Grid between Sign In and top of loginbox

--- a/amazon_grid.css
+++ b/amazon_grid.css
@@ -24,7 +24,7 @@ body {
   
   .loginbox {  display: grid;
     grid-template-columns: 0.2fr 1fr 0.2fr;
-    grid-template-rows: .5fr .5fr 1fr 1fr 1fr 2fr .5fr;
+    grid-template-rows: .1fr .5fr 1fr 1fr 1fr 2fr .5fr;
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
